2013-08-22  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_scanner_glue.c (script_xref, script_tag): Make error message
	more descriptive by printing the NVT name.

2013-08-14  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* INSTALL: Updated reference system from Debian 6 to 7.

2013-08-01  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* hg/hosts_gatherer.h: Fix comment typo.

2013-07-31  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Adding capability to NASL to run commands on a remote Windows
	machine when being authenticated. Similar like it is already
	possible to run commands on remote Linux systems using ssh.
	These patches were developed by Thanga Prakash <tprakash@secpod.com>.

	* nasl/smb_interface_stub.c (wincmd): New.

	* nasl/openvas_smb_interface.h: Add proto accordingly.

	* nasl/nasl_smb.c (nasl_win_cmd_exec): New.

	* nasl/nasl_smb.h: Add proto accordingly.

	* nasl/CMakeLists.txt: Added checks for wincmd library and handle
	if is found.

	* doc/wmi-howto.txt: Updated to consider additional patch and
	installation.

	* CMakeLists.txt: Add configure check for wincmd.

2013-07-24  Matthew Mundell <matthew.mundell@greenbone.net>

	* INSTALL: Reorder PKG_CONFIG_PATH export, in case another openvas
	installation is already in existing PKG_CONFIG_PATH.

2013-07-18  Michael Wiegand <michael.wiegand@greenbone.net>

	* hg/hg_utils.c (hg_get_name_from_ip): Hide debug output behind NDEBUG
	ndefines so it does not show up when built with the "Release" build
	type.

2013-07-16  Matthew Mundell <matthew.mundell@greenbone.net>

	* misc/plugutils.c (proto_post_wrapped): Enable sending of ALARM in
	place of LOG, NOTE and INFO.

2013-07-16  Matthew Mundell <matthew.mundell@greenbone.net>

	* ChangeLog: Clean up a little formatting.

2013-07-12  Werner Koch  <wk@gnupg.org>

	Remove circular dependency between misc/ and nasl/ introduced by
	me on 2012-09-20.

	* misc/network.c: Remove nasl_ssh.h include.
	(struct csc_hook_s): New.